# pomodoress

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.chalice/: config.json  config_backup.json
.chalice/deployed/: dev.json
calendar/: credentials.json  google_calendar.py  token.json
chalicelib/: config.py  cw_log.py  dispatcher.py  info.py  misc.py  pomodoro.py  rest.py  ssm_parameter.py  telegram.py
chalicelib/schedule/: rest_messages.txt  schedule.txt
chalicelib/tests/: conftest.py  test_app.py  test_dispatcher.py  test_log.py  test_pomodoro.py
src/: app.py  calendar_pomodoro.py  config.py  deploy.py  dispatcher.py  log.py  misc.py  notification.py  pomodoro.py  pomodoro_calendar_event.py  rest.py  utils.py
src/google_calendar/: calendar.py  calendar_event.py
src/tests/: conftest.py  test_calendar.py  test_dispatcher.py  test_pomodoro.py
storage/: rest_messages.txt  schedule.txt
