[tool.poetry]
name = "pomodoress"
version = "0.1.0"
description = ""
authors = ["Ress"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.19.2"
pytz = "^2021.3"
python-telegram-bot = "^13.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
