[tool.poetry]
name = "pomodoress"
version = "0.1.0"
description = ""
authors = ["Ress"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.19.2"
pytz = "^2021.3"
python-telegram-bot = "^13.9"
loguru = "^0.5.3"
google-api-python-client = "^2.33.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.6"
python-dateutil = "^2.8.2"
emoji = "^1.6.1"
sentry-sdk = "^1.5.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
